--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     background-color: orange;
     border-bottom: 2px solid black;
     padding: 10px;
+    background-image: url('shortview.png');
 }
 h1 {
     font-size: 36px;
